 cnp-pci-dss-1.3.3-ingress-qqxj-uz.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cnp-pci-dss-1.3.3-ingress-t8b5h8y
  namespace: kube-system
spec:
  description: "This policy will allow the inbound connection"
  endpointSelector:
    matchLabels:
      pod-template-generation: 1
      controller-revision-hash: 5848cb99f
      k8s-app: cilium-gke-node-init
  ingress:
    - fromEntities:
        - cluster
    - fromCIDRSet:
        - cidr: 10.10.10.1/16  #change with your id address
